@@ -1,6 +1,8 @@
 5/8/16
 -In options.cpp, need to create function default(), which sets up field size of 10 x 20
 		-Need to create separate Field class
+-Created field class with own display
+-Main program can now call either options to ask for user options or just run default_field() function 
 
 5/5/16
 -Bare-bones design of main.cpp, options.cpp
